feat: 좌석 시야 관련 로그 찍기 #53