@@ -1,5 +1,7 @@
 package com.inninglog.inninglog.seatView.service;
 
+import com.inninglog.inninglog.global.exception.CustomException;
+import com.inninglog.inninglog.global.exception.ErrorCode;
 import com.inninglog.inninglog.global.s3.S3Uploader;
 import com.inninglog.inninglog.seatView.domain.SeatView;
 import com.inninglog.inninglog.seatView.domain.SeatViewEmotionTag;
@@ -12,6 +14,7 @@ import com.inninglog.inninglog.seatView.repository.SeatViewEmotionTagMapReposito
 import com.inninglog.inninglog.seatView.repository.SeatViewEmotionTagRepository;
 import com.inninglog.inninglog.seatView.repository.SeatViewRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -21,22 +24,21 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@Slf4j
 public class HashtagSearchService {
 
     private final SeatViewRepository seatViewRepository;
     private final SeatViewEmotionTagMapRepository emotionTagMapRepository;
     private final S3Uploader s3Uploader;
 
-
     // 모아보기 형태 검색 (사진만)
     public Page<SeatViewImageResult> searchSeatViewsByHashtagsGallery(String stadiumShortCode, List<String> hashtagCodes, Pageable pageable) {
-        if (hashtagCodes == null || hashtagCodes.isEmpty() || hashtagCodes.size() > 5) {
-            throw new IllegalArgumentException("해시태그는 최소 1개, 최대 5개까지 선택할 수 있습니다.");
-        }
+        validateHashtagRequest(hashtagCodes);
+
+        log.info("🔍 해시태그 갤러리 검색 요청 | stadium={}, hashtags={}, page={}", stadiumShortCode, hashtagCodes, pageable.getPageNumber());
 
         Page<SeatView> seatViewPage = seatViewRepository.findSeatViewsByHashtagsAndPaged(
                 stadiumShortCode,
@@ -44,6 +46,8 @@ public class HashtagSearchService {
                 hashtagCodes.size(),
                 pageable
         );
+
+        log.info("✅ 갤러리 검색 결과 {}개 반환", seatViewPage.getContent().size());
 
         return seatViewPage.map(sv -> SeatViewImageResult.builder()
                 .seatViewId(sv.getId())
@@ -53,9 +57,9 @@ public class HashtagSearchService {
 
     // 게시물 형태 검색 (상세 정보 포함)
     public Page<SeatViewDetailResult> searchSeatViewsByHashtagsDetail(String stadiumShortCode, List<String> hashtagCodes, Pageable pageable) {
-        if (hashtagCodes == null || hashtagCodes.isEmpty() || hashtagCodes.size() > 5) {
-            throw new IllegalArgumentException("해시태그는 최소 1개, 최대 5개까지 선택할 수 있습니다.");
-        }
+        validateHashtagRequest(hashtagCodes);
+
+        log.info("🔍 해시태그 상세 검색 요청 | stadium={}, hashtags={}, page={}", stadiumShortCode, hashtagCodes, pageable.getPageNumber());
 
         Page<SeatView> seatViewPage = seatViewRepository.findSeatViewsByHashtagsWithDetailsAndPaged(
                 stadiumShortCode,
@@ -66,25 +70,23 @@ public class HashtagSearchService {
 
         List<Long> seatViewIds = seatViewPage.getContent().stream()
                 .map(SeatView::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, List<SeatViewEmotionTagDto>> emotionTagMap = getEmotionTagMap(seatViewIds);
 
-        Page<SeatViewDetailResult> resultPage = seatViewPage.map(sv ->
+        log.info("✅ 상세 검색 결과 {}개 반환", seatViewIds.size());
+
+        return seatViewPage.map(sv ->
                 SeatViewDetailResult.from(
                         sv,
                         emotionTagMap.getOrDefault(sv.getId(), new ArrayList<>()),
                         s3Uploader.generatePresignedGetUrl(sv.getView_media_url())
                 )
         );
-
-        return resultPage;
     }
 
     private Map<Long, List<SeatViewEmotionTagDto>> getEmotionTagMap(List<Long> seatViewIds) {
-        if (seatViewIds.isEmpty()) {
-            return Map.of();
-        }
+        if (seatViewIds.isEmpty()) return Map.of();
 
         List<SeatViewEmotionTagMap> tagMaps = emotionTagMapRepository.findBySeatViewIds(seatViewIds);
 
@@ -99,5 +101,12 @@ public class HashtagSearchService {
                                 Collectors.toList()
                         )
                 ));
+    }
+
+    private void validateHashtagRequest(List<String> hashtagCodes) {
+        if (hashtagCodes == null || hashtagCodes.isEmpty() || hashtagCodes.size() > 5) {
+            log.warn("❌ 잘못된 해시태그 요청: {}", hashtagCodes);
+            throw new CustomException(ErrorCode.INVALID_HASHTAG_REQUEST);
+        }
     }
 }
